- fixed bug #34851 (SO_RECVTIMEO and SO_SNDTIMEO socket options expect integer   parameter on Windows)